# Python-Yolo-Wrapper-for-Unity-interactions

./: .gitignore  LICENSE  README.md
Assets/Scenes/: SampleScene.unity
Assets/scripts/csharp/: UdpSocket.cs  WristScript.cs
ProjectSettings/: ProjectSettings.asset
UnityProject/: README.md  mono_crash.314544f508.0.json
UnityProject/Assets/Images/: Arrow.prefab
UnityProject/Assets/Mats/: Ball.mat  BallBlue.mat  BallRed.mat  Copper.mat  Silver.mat
UnityProject/Assets/Models/: cerceaux-olympiques.fbx  scene-flamme5.fbx  scene-flamme7.fbx
UnityProject/Assets/Prefabs/: AvatarSkeleton.prefab  AvatarSpawner.prefab  AvatarV2.prefab  BallSpawn.prefab  Canvas.prefab  Scene.prefab  SkeletonSpawner.prefab  SpaceDimensions.prefab  Sphere.prefab  socket.prefab
UnityProject/Assets/Scenes/: ArrowThrow.unity  Articulations.unity  Main.unity  PeopleInteraction.unity  SampleScene.unity  Scene-Olympiomedia.unity  WristGap.unity
UnityProject/Assets/Scripts/: ArrowThrow.cs  AvatarController.cs  AvatarScript.cs  AvatarSpawn.cs  BallScript.cs  BallSpawn.cs  NewAvatarController.cs  NewSkeletonSpawner.cs  SceneController.cs  Utils.cs  (+5 more)
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
python/: .gitignore  install.bat  main.py  makefile  requirements.txt  setup.cfg  setup.py  udpsocket.py  utils.py  yolo.py
python/scripts/: main.py
python/src/: main.py  yolo.py
python/src/pywui/: __init__.py  main.py  udpsocket.py  utils.py  yolo.py
python/tests/: test_udpsocket.py  test_utils.py  test_yolo.py
python/trackers/: botsort.yaml  bytetrack.yaml
(+30 files in other folders)
