[metadata]
name = pywui
version = 0.1
description = Module pywui
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.26.2
    opencv_python>=4.8.1.78
    ultralytics>=8.0.208
    pytest>=7.4.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pywui = pywui:main
    pywui-test = pywui:test
